# Automated-Information-Collection

./: .gitignore  BUGFIX_SUMMARY.md  LICENSE  README-EN.md  README.md  main.py  pyproject.toml
config/: config.yaml
src/: __init__.py  collector.py  main.py  parsers.py  storage.py
